test: improve config tests and suppress deprecation warnings
- Add comprehensive tests for gist config loading
- Handle environment mocking properly
- Suppress punycode deprecation warnings
- Update GitHub Actions workflow

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test:once": "vitest run",
+    "test:once": "NODE_OPTIONS='--no-deprecation' vitest run",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "prepare": "husky install",
