--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,4 +27,6 @@ jobs:
         run: pnpm install
 
       - name: Run tests
+        env:
+          NODE_OPTIONS: '--no-deprecation'
         run: pnpm test:once
