--- a/.eslintignore
+++ b/.eslintignore
@@ -1,1 +1,18 @@
+# Dependencies
+node_modules
 pnpm-lock.yaml
+
+# Build output
+dist
+coverage
+
+# Docker and configuration files
+Dockerfile
+docker-compose.yml
+nginx.conf
+.env*
+.gitignore
+
+# Other configuration files
+*.config.js
+*.config.ts
