--- a/package.json
+++ b/package.json
@@ -52,8 +52,11 @@
     "vitest": "^0.31.1"
   },
   "lint-staged": {
-    "*": [
+    "*.{js,jsx,ts,tsx}": [
       "eslint",
+      "prettier --write"
+    ],
+    "*.{json,yml,yaml,md}": [
       "prettier --write"
     ]
   }
