--- a/nginx.conf
+++ b/nginx.conf
@@ -9,18 +9,24 @@ server {
     gzip_vary on;
     gzip_min_length 10240;
     gzip_proxied expired no-cache no-store private auth;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml application/javascript;
     gzip_disable "MSIE [1-6]\.";
 
-    # Serve static files
+    # SPA configuration
     location / {
         try_files $uri $uri/ /index.html;
-        add_header Cache-Control "public, no-cache";
+        add_header Cache-Control "no-cache";
     }
 
-    # Cache static assets
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+    # Static assets
+    location /assets {
         expires 1y;
-        add_header Cache-Control "public, no-transform";
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Health check
+    location /health {
+        access_log off;
+        return 200 'healthy\n';
     }
 }
