Add GH repo user setting

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Gist configuration URL
 VITE_CONFIG_GIST_URL=your_gist_url_here
 
+# GitHub repository URL
+VITE_GITHUB_REPO=https://github.com/yourusername/terminal-portfolio
+
 # Node environment
 NODE_ENV=development
 
