--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     environment:
       - NODE_ENV=development
       - VITE_CONFIG_GIST_URL=${VITE_CONFIG_GIST_URL}
+      - VITE_GITHUB_REPO=${VITE_GITHUB_REPO}
     profiles: ["dev"]
     # Enable hot reload
     develop:
@@ -34,6 +35,7 @@ services:
     environment:
       - NODE_ENV=production
       - VITE_CONFIG_GIST_URL=${VITE_CONFIG_GIST_URL}
+      - VITE_GITHUB_REPO=${VITE_GITHUB_REPO}
     profiles: ["prod"]
     restart: unless-stopped
 
